--- a/css/header.css
+++ b/css/header.css
@@ -67,7 +67,7 @@
 
 .header_search_input {
     height: 100%;
-    flex: 1;
+    width: inherit;
     border-radius: 0 2rem 2rem 0;
     font-size: 1.4rem;
     background-color: transparent;
