--- a/css/musicbar.css
+++ b/css/musicbar.css
@@ -23,6 +23,53 @@
     width: 30%;
 }
 
+.musicbar_info_disk_note_wrapper {
+    position: relative;
+}
+
+.musicbar_info_disk_note_wrapper.playing .thumb_note_icon {
+    display: block;
+}
+
+.thumb_note_icon {
+    opacity: 0;
+    width: 1.2rem;
+    color: var(--text-color);
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+    display: none;
+}
+
+.thumb_note_1 {
+    animation: circleAround 6s linear infinite;
+}
+
+.thumb_note_2 {
+    animation: circleAround 6s 1.6s linear infinite;
+}
+
+.thumb_note_3 {
+    animation: circleAround 6s 3.2s linear infinite;
+}
+
+.thumb_note_4 {
+    animation: circleAround 6s 4.8s linear infinite;
+}
+
+@keyframes circleAround {
+    from {
+        opacity: 0.8;
+        width: 1.2rem;
+        transform: rotate(0deg) translateY(5rem) rotate(0deg);
+    }
+    to {
+        opacity: 0;
+        width: 1.4rem;
+        transform: rotate(200deg) translateY(5rem) rotate(-200deg);
+    }
+}
+
 .musicbar_info_disk_wrapper {
     width: 6.4rem;
     height: 6.4rem;
@@ -32,13 +79,13 @@
     transition: margin-left linear .2s;
 }
 
-.musicbar_info_disk_wrapper.playing {
+.musicbar_info_disk_note_wrapper.playing {
     will-change: auto;
     margin-left: 2rem;
     transition: margin-left linear .2s;
 }
 
-.musicbar_info_disk_wrapper.playing .musicbar_info_disk {
+.musicbar_info_disk_note_wrapper.playing .musicbar_info_disk {
     animation: rotateDisk linear 10s infinite;
 }
 
@@ -106,7 +153,7 @@
 .musicbar_custom_play_icon {
     background: none;
     border: none;
-    margin: 0 1.4rem;
+    margin: 0 1.8rem;
 }
 
 .musicbar_custom_play_icon > i {
