--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
     margin: 0; padding: 0;
     box-sizing: border-box;
     text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;    
+    -webkit-font-smoothing: antialiased;  
+    -webkit-user-select: none;  
+    -webkit-tap-highlight-color: transparent;
 }
 
 html {
