--- a/css/user/slides.css
+++ b/css/user/slides.css
@@ -1,17 +1,17 @@
 .user_overview_content_slides {
     position: relative;
     height: 100%;
+    width: 29rem;
     display: flex;
     align-items: center;
 }
 
 .user_overview_slides_wrapper_image {
-    width: 16.2rem;
-    height: 16.2rem;
+    width: 50%;
     position: absolute;
-    border-radius: .4rem;
+    border-radius: .6rem;
     overflow: hidden;
-    transform: translateX(0) scale(1, 1);
+    transform: translateX(10%) scale(1.2, 1.2);
     animation: ToBegin .5s linear;
 }
 
@@ -19,49 +19,53 @@
     width: 100%;
 }
 
-.slide-second {
-    transform: translateX(3rem) scale(1.2, 1.2);
-    opacity: .7;
+.slide-third {
     z-index: 1;
+}
+
+.slide-second {
+    transform: translateX(32%) scale(1.4, 1.4);
+    opacity: .7;
+    z-index: 2;
     animation: ToSecond .5s linear;
 }
 
 .slide-first {
-    z-index: 2;
-    transform: translateX(7rem) scale(1.4, 1.4);
+    z-index: 3;
+    transform: translateX(56%) scale(1.6, 1.6);
     animation: ToFirst .5s linear;
 }
 
 @keyframes ToFirst {
     from {
         opacity: .7;
-        transform: translateX(3rem) scale(1.2, 1.2);
+       transform: translateX(32%) scale(1.4, 1.4);
     }
     to {
         opacity: 1;
-        transform: translateX(7rem) scale(1.4, 1.4);
+         transform: translateX(56%) scale(1.6, 1.6);
     }
 }
 
 @keyframes ToSecond {
     from {
         opacity: 1;
-        transform: translateX(0) scale(1, 1);
+        transform: translateX(10%) scale(1.2, 1.2);
     }
     to {
         opacity: .7;
-        transform: translateX(3rem) scale(1.2, 1.2);
+       transform: translateX(32%) scale(1.4, 1.4);
     }
 }
 
 @keyframes ToBegin {
     from {
         opacity: 1;
-        transform: translateX(7rem) scale(1.4, 1.4);
+         transform: translateX(56%) scale(1.6, 1.6);
     }
     to {
         opacity: 0;
-        transform: translateX(0) scale(1, 1);
+        transform: translateX(10%) scale(1.2, 1.2);
     }
 }
 
