--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
     font-family: 'Inter', sans-serif;
-    background: url('../images/themes/theme1.svg') ;
+    background: url('../images/themes/theme1.svg') repeat fixed;
     background-size: 1920px auto;
 }
 
